mand/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mand
  namespace: w3cie
  labels:
    app: mand
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: mand
  sessionAffinity: None
  type: ClusterIP
